# scd30pi

./: .gitignore  Cargo.toml  Readme.md
examples/: Readme.md  single_read.rs
src/: lib.rs  main.rs
src/i2c/: mod.rs  tests.rs
src/scd30/: mod.rs  tests.rs
