[package]
name = "scd30pi"
version = "0.4.3-beta.0"
authors = ["Crispin Tschirky <ct@fhr.ch>"]
edition = "2018"
description = "Interfaces the SCD30 i2c CO2, temperature and humidity sensor from Sensirion for Raspberry Pi"
repository = "https://github.com/crisobal/scd30pi"
readme = "Readme.md"
license = "MIT"
categories = ["embedded", "hardware-support"]
keywords = ["raspberry", "co2", "scd30", "i2c"]

[dependencies]
rppal = "0.11.3"
log = "0.4"
